Changement de l'adresse de l'entreprise

--- a/Global.tex
+++ b/Global.tex
@@ -53,8 +53,8 @@
 
 \date{
 	\normalsize{Entreprise d'accueil : IdentIt\\
-    1294 rue Achille \bsc{Pérès}\\
-	Petite-Synthe\\
+    route du Pont Noir - Port 2122\\
+  Dunkerque\\
 	\vspace{5mm}
   Tuteur de stage : \bsc{M.~Anselin}\\
 	Maître de stage : \bsc{M.~Dubourg}
