Suppression des copyrights

--- a/Intro.tex
+++ b/Intro.tex
@@ -17,7 +17,7 @@ composée de quatre personnes et se situe depuis peu à Saint Pol sur Mer.
 structure, le premier s'occupe de la partie technique en tant que chef
 de projet et le second de la partie gestion de l'entreprise. Ils sont
 accompagnés par deux développeurs, l'un travaillant sur des solutions
-Windows Mobile~\textregistered, l'autre étant plus spécialisé sur le
+Windows Mobile, l'autre étant plus spécialisé sur le
 développement Web.
 
 Mon premier stage consistait à développer un utilitaire pour la partie
