--- a/Partie1.tex
+++ b/Partie1.tex
@@ -81,7 +81,7 @@ applications, nous avons pu utiliser notre compilé dernier cri.
 \label{sec:Le tutoriel utilisateur}
 
 Pour aider les développeurs à intégrer le nouveau gestionnaire de
-version, j'ai élaboré un document Office Word~\textregistered{} de
+version, j'ai élaboré un document Office Word de
 quatorze pages qui explique les bases du logiciel, la mise en place de
 l'outil dans leur environnement de travail respectif et l'utilisation de
 celui-ci avec le gratuiciel TortoiseGit.  Pour être au plus près des
@@ -90,7 +90,7 @@ du guide sous forme de questions et de réponses.
 
 \begin{enumerate}
   \item Les bases
-  \item Comment mettre en place Git sur Windows~\textregistered ?
+  \item Comment mettre en place Git sur Windows ?
   \item Comment gérer les dépôts Git ?
   \item Comment utiliser Git ?
   \item Comment utiliser les branches ?
@@ -163,12 +163,12 @@ multitude de dépôts implique une mise à jour des clones locaux pour
 récupérer les modifications des autres développeurs ce qui est très
 répétitif. J'ai donc créé un script Batch\, \footnote{Désigne un fichier
 qui contient une suite de commandes qui seront traitées automatiquement
-par Windows~\textregistered.} qui explore tous les dossiers englobant
+par Windows.} qui explore tous les dossiers englobant
 les sources des dépôts et les met à jour. Pour cela j'ai parcouru la
-documentation de la console Windows~\textregistered{} et ça n'a pas été
+documentation de la console Windows et ça n'a pas été
 évident du tout. Pour l'anecdote, je devais à partir de mon MacBook
 Pro\, \footnote{Mac OS X est un système de type UNIX.} ; lancer une
-machine virtuelle Windows~\textregistered\, \footnote{À partir du
+machine virtuelle Windows\, \footnote{À partir du
 logiciel VirtualBox.} ; pour créer mon script qui s'exécute en console ;
 et qui lance enfin un terminal Linux pour faire la mise à jour\dots
 % subsection Mise à jour locale automatique (end)%}}}
