--- a/Partie2.tex
+++ b/Partie2.tex
@@ -16,7 +16,7 @@
 
 \lettrine{C}{ertaines} entreprises dans un but de confidentialité
 préfèrent utiliser des applications en intranet. Dans mon cas, un
-serveur sous Windows~\textregistered{} Server 2008 utilise IITAMP ainsi
+serveur sous Windows Server 2008 utilise IITAMP ainsi
 qu'une application \emph{IdentIt} pour qu'a partir du réseau local tout
 les ordinateurs puissent utiliser l'application. De ce fait, le produit
 n'est pas accessible via l'Internet.
