--- a/Partie3.tex
+++ b/Partie3.tex
@@ -136,7 +136,7 @@ Quelques problèmes sont apparu pendant la phase de debogage :
   \item[Communication entre les bases :] XAMPP par défaut ne permet pas
     d'utiliser une base SQL Server, il à fallut que j'installe et
     configure le driver officiel de l'entreprise
-    Microsoft~\textregistered pour permettre l'accès à la base de
+    Microsoft pour permettre l'accès à la base de
     données.
 
   \item[Synthaxe invalide pour SQL Server :] Une habitude est ancrée
