Corrections des erreurs relevés

--- a/Conclusion.tex
+++ b/Conclusion.tex
@@ -5,7 +5,7 @@
 progression que m'ont apportés ces stages. Je peux dire en toute
 humilité que j'en ressors grandi.
 
-J'ai pu m'appercevoir que l'entreprise utilisai toujours la technologie
+J'ai pu m'appercevoir que l'entreprise utilisait toujours les technologies
 que j'ai mis en place durant la première année, des modifications ont
 été aportées mais on mon code de base est toujours là ce qui indique une
 certaine qualité dans le travail que j'ai pu accomplir.
@@ -15,8 +15,9 @@ toujours plus loin dans l'exploitation de celui-ci. En effet, j'avais
 constaté des la première semaine du deuxième stage que quelques
 principes fondamentaux d'utilisation avait été oubliés. J'ai pu aussi
 leur présenter des nouvelles fonctionnalitées qui sont apparut pendant
-le laps de temps des deux stages. L'usage de base convient dans 90\%{}
-des cas mais certaines particularitées sont toujours bonne à connaitre.
+le laps de temps entre les deux stages. L'usage de base convient dans
+90\%{} des cas mais certaines particularitées sont toujours bonne à
+connaitre.
 
 J'ai découvert le travail de développeur en entreprise et je dois dire
 que cela me plait, cependant ce n'est pas toujours évident.  Bloquer sur
