--- a/Partie2.tex
+++ b/Partie2.tex
@@ -23,7 +23,7 @@ n'est pas accessible via l'Internet.
 
 La confidentialité n'est pas le seul atout. En effet, passer par un
 réseau d'entreprise en terme de performance est avantageux car les
-requêtes entre le client et le serveur ce font \emph{intra-muros} tandis
+requêtes entre le client et le serveur ce font \emph{intra muros} tandis
 que passer par un hébergeur qui peut ce trouver à des milliers de
 kilomètres affecte les délais. Utiliser une solution d'hébergement sur
 le réseau des réseaux à un coût alors qu'une solution locale n'est pas
@@ -38,7 +38,7 @@ solution ça continue à fonctionner.
 \label{sec:La base applicative}
 
 Je suis tout d'abord parti d'une base XAMPP générique. C'est un logiciel
-libre développer par une équipe de bénévoles. Cette ensemble de
+libre développé par une équipe de bénévoles. Cette ensemble de
 programmes permettent de mettre en \oe{}uvre un serveur web sur un PC
 Windows à des fins de développement. La suite XAMPP regroupe les
 logiciels Apache\, \footnote{Serveur HTTP}, MySQL\, \footnote{Serveur de
