Reformulation pour que ça déborde pas

--- a/Partie2.tex
+++ b/Partie2.tex
@@ -132,20 +132,20 @@ des applications après la finalisation du serveur IITAMP.
   \item[Mise en \oe{}uvre d'un IITAMP :] mise en place de l'IITAMP
     nouvellement installé en entreprise ou mise à jour de celui-ci.
 
-  \item[Construction d'une application Web :] Permet de guider la
+  \item[Préparation d'une application :] Illustre les étapes de
     préparation d'une application Web d'\emph{IdentIt} pour quel soit
     parfaitement intégré à IITAMP.
 
-  \item[Déploiement d'une application Web :] Comment mettre en place ou
+  \item[Déploiement d'une application :] Comment mettre en place ou
     mettre à jour une application web dans un IITAMP déjà en service.
 
   \item[Maintenance de bases de données :] Explication de la mise en
     place d'une sauvegarde automatique des bases de données des
     applications ainsi que la restauration de ses sauvegardes.
 
-  \item[Démarche d'activation d'une application GeMa :] Documentation
-    pour \emph{IdentIt} compréhensible par les non techniciens qui
-    explique comment activer une application chez un client.
+  \item[Démarche d'activation de GeMa :] Documentation pour
+    \emph{IdentIt} compréhensible par les non techniciens qui explique
+    comment activer une application chez un client.
 
   \item[Mise en place de GeMa en entreprise :] Documentation pour les
     clients qui décrit les premières étapes à suivre pour utiliser GeMa.
