Oubli de faire des refs aux images

--- a/Partie3.tex
+++ b/Partie3.tex
@@ -37,13 +37,14 @@ technicien indique sa position sur site, grâce aux fonctions GPS de
 GeMa. En temps réel, les responsables et/ou clients disposent
 d'informations fiables et exploitables au travers d'historiques, de
 statistiques, de bilans, d'alertes email ou via des échanges avec un
-logiciel tiers.
+logiciel tiers. La figure~\ref{gema} en page~\pageref{gema} illustre
+l'utilisation conventionnelle de l'application.
 
 \begin{figure}
   \begin{center}
     \includegraphics{images/gema.png}
     \caption{Schéma d'utilisation de GeMa via l'Internet.}
-    \label{workflow}
+    \label{gema}
   \end{center}
 \end{figure}
 % section Présentation de GeMa (end)%}}}
@@ -87,7 +88,8 @@ Le réseau privé virtuel vise à apporter certains éléments essentiels
 dans la transmission de données : l'authentification (et donc
 l'identification) des interlocuteurs, la confidentialité des données via
 le chiffrement (qui vise à les rendre inutilisables par quelqu'un
-d'autre que le destinataire).
+d'autre que le destinataire). La figure~\ref{vpn} en page~\pageref{vpn}
+illustre le principe de ce type de connexion.
 
 La mise en \oe{}uvre d'IITAMP ainsi que de GeMa s'effectuant dans
 l'usine de Nerac près de bordeaux, le client nous à prêter un ordinateur
