Saut de ligne inutile

--- a/Partie3.tex
+++ b/Partie3.tex
@@ -130,7 +130,7 @@ interventions. Pour tester si l'application GeMa fonctionne correctement
 ainsi que le script de duplication de donnée, quelques tests furent
 nécessaire. Étant donnée que le site de production n'est pas proche,
 l'utilisation d'un émulateur de PDA au travers du réseau VPN fut
-nécessaire.\\
+nécessaire.
 
 Quelques problèmes sont apparu pendant la phase de debogage :
 \begin{description}
