Fixbug : suppression d'un pageref

--- a/Partie3.tex
+++ b/Partie3.tex
@@ -88,8 +88,8 @@ Le réseau privé virtuel vise à apporter certains éléments essentiels
 dans la transmission de données : l'authentification (et donc
 l'identification) des interlocuteurs, la confidentialité des données via
 le chiffrement (qui vise à les rendre inutilisables par quelqu'un
-d'autre que le destinataire). La figure~\ref{vpn} en page~\pageref{vpn}
-illustre le principe de ce type de connexion.
+d'autre que le destinataire). La figure~\ref{vpn} illustre le principe
+de ce type de connexion.
 
 La mise en \oe{}uvre d'IITAMP ainsi que de GeMa s'effectuant dans
 l'usine de Nerac près de bordeaux, le client nous à prêter un ordinateur
